--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sreeharikarrichekka1102/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -59,46 +59,106 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dm1hT_B9jXGu"
+        "id": "dm1hT_B9jXGu",
+        "outputId": "387ce510-e80b-4e9f-abf0-86edf8ab6a85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "3 + 2         # addition"
+        "5+5       # addition"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sUhkQPuhXbYj"
+        "id": "sUhkQPuhXbYj",
+        "outputId": "d5ab2564-cf9a-4f30-fb64-715e1ba72af7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "3 - 2         # subtraction"
+        "32-21    # subtraction"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B1gLBI1LXo1m"
+        "id": "B1gLBI1LXo1m",
+        "outputId": "d82dda0c-b717-4684-fc00-d39a5d7797ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 * 3         # multiplication"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TwvpedNVXzRc"
+        "id": "TwvpedNVXzRc",
+        "outputId": "aac2a133-e1d8-4747-d513-d8a3e7d9efc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 / 2         # division (always returns a float)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -114,57 +174,132 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qjJkqqXcX95p"
+        "id": "qjJkqqXcX95p",
+        "outputId": "36a5c9e1-61cb-44af-8069-ddd26d1ed9e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 // 2        # floor division (returns an integer - discards decimal part)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2L_ku8CLYKDC"
+        "id": "2L_ku8CLYKDC",
+        "outputId": "71145ffa-7e71-4564-a174-0e767f74140a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type ( 7 // 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH2NmrgNYM97"
+        "id": "dH2NmrgNYM97",
+        "outputId": "b9a49267-35b3-4879-d160-df97214263fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 % 2         # modulus operator - remainder is fetched after division"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wNTJter-YZ7W"
+        "id": "wNTJter-YZ7W",
+        "outputId": "a89f0f0b-c2d6-4e71-887c-fb984cd6b53d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 ** 2        # exponentiation "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "asikDVm7YvYT"
+        "id": "asikDVm7YvYT",
+        "outputId": "d5ab94c6-4032-4a87-d5ce-1a42c84bbe11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 - 2 * 2     # operator precedence : (), **, -(unary),  * or /, + or -"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -176,52 +311,128 @@
         "first_name = 'charlie'\n",
         "second_name = \"chaplin\""
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYu_ynPOeS2_"
+        "id": "oYu_ynPOeS2_",
+        "outputId": "1c85e215-7a6c-4363-b435-f5ff7aa785e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliechaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oIY8q8wgehFC"
+        "id": "oIY8q8wgehFC",
+        "outputId": "30a2f2d5-e12a-44bb-c617-0f926ea16725",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + ' ' + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charlie chaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Vuv8iMbevRJ"
+        "id": "6Vuv8iMbevRJ",
+        "outputId": "f789c1e9-a049-4a6a-f050-38fcebd99af1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name * 2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QPblckrXe2ui"
+        "id": "QPblckrXe2ui",
+        "outputId": "f119a0d3-de5b-4915-99c8-7ffd00da0ee9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie chaplinchaplinchaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -247,27 +458,68 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "pKZ7uDHCZ3At"
+        "id": "995yg3OEFk7w"
       },
       "source": [
-        "brick_volume = brick_length * brick_breadth * brick_height\n",
-        "print (brick_volume)"
-      ],
-      "execution_count": null,
-      "outputs": []
+        ""
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S2zZsoBb2z45"
+        "id": "pKZ7uDHCZ3At",
+        "outputId": "4e5589f4-d306-43c0-d581-12de31c40b66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# 2. What will the expression -3 ** 2 evaluate to ?\n"
+        "#brick_volume = brick_length * brick_breadth * brick_height\n",
+        "#print (brick_volume)\n",
+        "(5*4*2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "40"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S2zZsoBb2z45",
+        "outputId": "a311948d-9f7e-44f4-f01c-32c4e87f17ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 2. What will the expression -3 ** 2 evaluate to ?\n",
+        "3**2"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -279,15 +531,89 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dfcxn8OzHLqJ"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "fZ4Tpi0B27lf"
+        "id": "fg0Psnc0Iii8"
       },
       "source": [
         ""
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fZ4Tpi0B27lf"
+      },
+      "source": [
+        "petrol_cost =102\n",
+        "milage  = 38\n",
+        "cash = 50"
+      ],
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rlw6Td5JIzPu"
+      },
+      "source": [
+        "distance = (milage/petrol_cost)*cash"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DT-OSYPtHy-U"
+      },
+      "source": [
+        "distance = (milage/petrol_cost)*cash"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A89uWqPoIgYr",
+        "outputId": "3f85f463-0aeb-4b00-c8c3-58da6b60db52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\" the distance is :\", round(distance,2))"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " the distance is : 18.63\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GQTnvvBFHl3T"
+      },
+      "source": [
+        "print(\" the distance is  :\", round(distance,2))"
+      ]
     },
     {
       "cell_type": "markdown",
