--- a/08_File_Processing.ipynb
+++ b/08_File_Processing.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "08 File Processing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEK0fUwDfn7xm6b4V5d5DI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,19 +23,41 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/08_File_Processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sreeharikarrichekka1102/fmml2021/blob/main/08_File_Processing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "on0OBs9S-eiS"
+        "id": "on0OBs9S-eiS",
+        "outputId": "03f47c5b-3ab4-4722-9e57-2714315893c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!wget https://raw.githubusercontent.com/aosp-mirror/platform_external_protobuf/master/CONTRIBUTORS.txt"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-09-17 14:33:11--  https://raw.githubusercontent.com/aosp-mirror/platform_external_protobuf/master/CONTRIBUTORS.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.110.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3924 (3.8K) [text/plain]\n",
+            "Saving to: ‘CONTRIBUTORS.txt’\n",
+            "\n",
+            "\rCONTRIBUTORS.txt      0%[                    ]       0  --.-KB/s               \rCONTRIBUTORS.txt    100%[===================>]   3.83K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-09-17 14:33:11 (68.0 MB/s) - ‘CONTRIBUTORS.txt’ saved [3924/3924]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -47,13 +68,17 @@
         "infile_pointer = open(\"CONTRIBUTORS.txt\", \"r\")\n",
         "outfile_pointer = open(\"emails-id.txt\", \"w\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4yocH5ViAb-g"
+        "id": "4yocH5ViAb-g",
+        "outputId": "f31b2886-73ff-4455-e643-151c9d851645",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "for each_line in infile_pointer:\n",
@@ -63,8 +88,103 @@
         "infile_pointer.close()\n",
         "outfile_pointer.close()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Sanjay Ghemawat <sanjay@google.com>\n",
+            "\n",
+            "  Jeff Dean <jeff@google.com>\n",
+            "\n",
+            "  Daniel Dulitz <daniel@google.com>\n",
+            "\n",
+            "  Paul Haahr <haahr@google.com>\n",
+            "\n",
+            "  Corey Anderson <corin@google.com>\n",
+            "\n",
+            "  Kenton Varda <kenton@google.com>\n",
+            "\n",
+            "  Will Robinson <robinson@google.com>\n",
+            "\n",
+            "  Petar Petrov <petar@google.com>\n",
+            "\n",
+            "  Brian Duff <bduff@google.com>\n",
+            "\n",
+            "  Tom Chao <chaot@google.com>\n",
+            "\n",
+            "  Max Cai <maxtroy@google.com>\n",
+            "\n",
+            "  Ulas Kirazci <ulas@google.com>\n",
+            "\n",
+            "  Jason Hsueh <jasonh@google.com>\n",
+            "\n",
+            "  Joseph Schorr <jschorr@google.com>\n",
+            "\n",
+            "  Wenbo Zhu <wenboz@google.com>\n",
+            "\n",
+            "  Scott Bruce <sbruce@google.com>\n",
+            "\n",
+            "  Neal Norwitz <nnorwitz@google.com>\n",
+            "\n",
+            "  Jeffrey Yasskin <jyasskin@google.com>\n",
+            "\n",
+            "  Ambrose Feinstein <ambrose@google.com>\n",
+            "\n",
+            "  Lisa Carey <lcarey@google.com>\n",
+            "\n",
+            "  Gregory Kick <gak@google.com>\n",
+            "\n",
+            "  Kevin Ko <kevin.s.ko@gmail.com>\n",
+            "\n",
+            "  Johan Euphrosine <proppy@aminche.com>\n",
+            "\n",
+            "  Ulrich Kunitz <kune@deine-taler.de>\n",
+            "\n",
+            "  Leandro Lucarella <llucax@gmail.com>\n",
+            "\n",
+            "  Dilip Joseph <dilip.antony.joseph@gmail.com>\n",
+            "\n",
+            "  Brian Atkinson <nairb774@gmail.com>\n",
+            "\n",
+            "  Vincent Choinière <Choiniere.Vincent@hydro.qc.ca>\n",
+            "\n",
+            "  Monty Taylor <monty.taylor@gmail.com>\n",
+            "\n",
+            "  Alek Storm <alek.storm@gmail.com>\n",
+            "\n",
+            "  Oleg Smolsky <oleg.smolsky@gmail.com>\n",
+            "\n",
+            "  Brian Olson <brianolson@google.com>\n",
+            "\n",
+            "  Michael Poole <mdpoole@troilus.org>\n",
+            "\n",
+            "  Wink Saville <wink@google.com>\n",
+            "\n",
+            "  Will Pierce <willp@nuclei.com>\n",
+            "\n",
+            "  Alexandre Vassalotti <alexandre@peadrop.com>\n",
+            "\n",
+            "  Scott Stafford <scott.stafford@gmail.com>\n",
+            "\n",
+            "  Alexander Melnikov <alm@sibmail.ru>\n",
+            "\n",
+            "  Oliver Jowett <oliver.jowett@gmail.com>\n",
+            "\n",
+            "  Evan Jones <evanj@mit.edu>\n",
+            "\n",
+            "  Michael Kucharski <m.kucharski@gmail.com>\n",
+            "\n",
+            "  Kacper Kowalik <xarthisius.kk@gmail.com>\n",
+            "\n",
+            "  William Orr <will@worrbase.com>\n",
+            "\n",
+            "  Andrew Paprocki <andrew@ishiboo.com>\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
